--- a/css/h5.css
+++ b/css/h5.css
@@ -11,7 +11,7 @@ a{
 x-con{
 	font-family: 微团雅黑;
 	margin: 0 auto;
-	width: 1000px;
+	width: 90%;
 	display: block;
 	border: 1px solid #808080;
 	background: #000000;
@@ -20,20 +20,14 @@ x-con{
 }
 .chcon{
 	background: #303030;
-	padding: 10px;
+	padding: 2%;
 	box-sizing: border-box;
 	color: #C0C0C0;
 	border: 1px solid #808080;
 	word-wrap: break-word;
 }
 .Chtitle{
-	height: 100px;
-	text-align: center;
-	display: inline-block;
-}
-.Chtitle h2{
-	line-height: 100px;
-	margin: 0;
+	margin: 50px auto;
 }
 dl{
 	padding: 0;
